* before Han ref <愘#3413926>

--- a/en/愘/愘.15660.wikitext
+++ b/en/愘/愘.15660.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9306<sub>4</sub>|canj=心十竹口 (PJHR)}}
+
 # {{defn|Han|sort=心09}}
+
 ====References====
-{{Han ref|kx=0395.090|dkj=10943|dj=0731.190|hdz=42331.080|uh=6118|ud=24856|bh=D94B|bd=55627}}
+* {{Han ref|kx=0395.090|dkj=10943|dj=0731.190|hdz=42331.080|uh=6118|ud=24856|bh=D94B|bd=55627}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[kè]] ([[ke4]])|wg=k'o<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愘]]
