--- a/en/偼/偼.11148.wikitext
+++ b/en/偼/偼.11148.wikitext
@@ -1,16 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人卜尸人 (OYSO)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0112.071|dkj=00925|hdz=10189.011|uh=507C|ud=20604}}
+* {{Han ref|kx=0112.071|dkj=00925|hdz=10189.011|uh=507C|ud=20604}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jié]] ([[jie2]]), [[wèi]] ([[wei4]])|wg=chieh<sup>2</sup>, wei<sup>4</sup>}}
+
 # {{defn|Mandarin}}
-
-
-
 
 [[fr:偼]]
