--- a/en/愦/愦.15673.wikitext
+++ b/en/愦/愦.15673.wikitext
@@ -1,22 +1,30 @@
 {{see|憒}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=|canj=心中一人 (PLMO)}}
+
 # confused, troubled, muddle-headed
+
 ====References====
-{{Han ref|kx=0396.071|hdz=42328.060|uh=6126|ud=24870}}
+* {{Han ref|kx=0396.071|hdz=42328.060|uh=6126|ud=24870}}
 
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=kui2}}
+
 # {{defn|Cantonese}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|tra=憒|pin=[[kuì]] ([[kui4]])|wg=k'uei<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愦]]
