--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -48,6 +48,7 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 {{trans-mid}}
 * Icelandic: [[slást]], [[berjast]]
 * Italian: {{t-|it|azzuffarsi}}, {{t-|it|battersi}}
+* Japanese: [[喧嘩する]] ([[けんかする]], kenka-suru), [[対決]] ([[たいけつする]], taiketsu-suru), [[戦う]] / [[闘う]] ([[たたかう]], tatakau)
 * Korean: [[싸우다]] (ssauda)
 * Kurdish:
 *: Sorani: {{t|ku|شه‌ڕ کردن|tr=shaR kirdin|sc=KUchar}}
@@ -66,6 +67,7 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 * Hebrew: {{he-translation|נאבק|ne'evák}}
 {{trans-mid}}
 * Icelandic: [[berjast]]
+* Japanese: [[戦う]] / [[闘う]] ([[たたかう]], tatakau)
 * Spanish: {{t-|es|luchar}}
 * Portuguese: [[lutar]]
 {{trans-bottom}}
@@ -76,6 +78,7 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 * Hebrew: {{he-translation|נלחם|nilkhám}}
 {{trans-mid}}
 * Icelandic: {{t-|is|heyja}}
+* Japanese: [[戦う]] / [[闘う]] ([[たたかう]], tatakau)
 * [[Scottish Gaelic]]: [[cog]], [[sabaid]]
 {{trans-bottom}}
 
@@ -88,6 +91,7 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 {{trans-mid}}
 * Icelandic: [[berjast]] [[við]]
 * Italian: {{t+|it|combattere}}
+* Japanese: [[対決]] ([[たいけつする]], taiketsu-suru), [[戦う]] / [[闘う]] ([[たたかう]], tatakau)
 * Korean: [[싸우다]] (ssauda)
 * Portuguese: [[lutar]] com/contra, [[combater]]
 * [[Scottish Gaelic]]: [[cog]], [[sabaid]]
@@ -105,6 +109,7 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 {{trans-mid}}
 * Icelandic: [[berjast]] [[gegn]]
 * Italian: [[lottare]] contro
+* Japanese: [[戦う]] / [[闘う]] ([[たたかう]], tatakau)
 * Latin: {{t-|la|pugnare}}
 * Polish: [[walczyć]]
 * Portuguese: [[lutar]] contra, [[combater]], [[enfrentar]]
@@ -114,7 +119,6 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 {{checktrans}}
 {{trans-top|Translations to be checked}}
 *{{ttbc|Indonesian}}: [[tarung]], [[tengkar]], [[serang]]
-*{{ttbc|Japanese}}: [[喧嘩する]] ([[けんかする]], kenka-suru), [[対決]] ([[たいけつする]], taiketsu-suru), [[戦う]] / [[闘う]] ([[たたかう]], tatakau), [[闘]] ([[とう]], tô)
 *{{ttbc|Romanian}}: [[luptă]] {{f}}, [[bătaie]] {{f}}
 *{{ttbc|Spanish}}: [[pelear]]
 {{trans-bottom}}
