--- a/en/倵/倵.11071.wikitext
+++ b/en/倵/倵.11071.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=2324<sub>0</sub>|canj=人一心一 (OMPM)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0109.170|dkj=00807|hdz=10169.170|uh=5035|ud=20533|bh=D0DA|bd=53466}}
+* {{Han ref|kx=0109.170|dkj=00807|hdz=10169.170|uh=5035|ud=20533|bh=D0DA|bd=53466}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人08}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ぶ]] (bu), [[む]] (mu)|kun=}}
+* {{ja-readings|on=[[ぶ]] (bu), [[む]] (mu)|kun=}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[wǔ]] ([[wu3]])|wg=wu<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:倵]]
