--- a/en/圴/圴.12982.wikitext
+++ b/en/圴/圴.12982.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=03|sn=6|four=4712<sub>0</sub>|canj=土心戈 (GPI)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0224.160|dkj=04895|dj=0459.010|hdz=10420.050|uh=5734|ud=22324|bh=C9CA|bd=51658}}
+* {{Han ref|kx=0224.160|dkj=04895|dj=0459.010|hdz=10420.050|uh=5734|ud=22324|bh=C9CA|bd=51658}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土03}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[しゃく]] (shaku), [[さく]] (saku)|kun=[[あと]] (ato)}}
+* {{ja-readings|on=[[しゃく]] (shaku), [[さく]] (saku)|kun=[[あと]] (ato)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[zhuó]] ([[zhuo2]])|wg=cho<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:圴]]
