--- a/en/坢/坢.13029.wikitext
+++ b/en/坢/坢.13029.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=4915<sub>0</sub>|canj=土火手 (GFQ)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0226.120|dkj=04967|dj=0461.260|hdz=10435.010|uh=5762|ud=22370|bh=CBFE|bd=52222}}
+* {{Han ref|kx=0226.120|dkj=04967|dj=0461.260|hdz=10435.010|uh=5762|ud=22370|bh=CBFE|bd=52222}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[はん]] (han), [[ばん]] (ban)|kun=[[たひらか]] (tahiraka), [[ちり]] (chiri)}}
+* {{ja-readings|on=[[はん]] (han), [[ばん]] (ban)|kun=[[たひらか]] (tahiraka), [[ちり]] (chiri)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[pǎn]] ([[pan3]])|wg=p'an<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坢]]
