--- a/en/坓/坓.13014.wikitext
+++ b/en/坓/坓.13014.wikitext
@@ -1,13 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=廿廿土 (TTG)}}
+
 # {{defn|Han|sort=土04}}
+
 ====References====
-{{Han ref|kx=0226.050|dkj=04937|dj=0461.040|hdz=10421.060|uh=5753|ud=22355}}
+* {{Han ref|kx=0226.050|dkj=04937|dj=0461.040|hdz=10421.060|uh=5753|ud=22355}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[xíng]] ([[xing2]])|wg=hsing<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坓]]
