--- a/en/惞/惞.15603.wikitext
+++ b/en/惞/惞.15603.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=08|sn=11|four=|canj=心竹中人 (PHLO)}}
+
 # {{defn|Han|sort=心08}}
+
 ====References====
-{{Han ref|kx=0391.150|dkj=10818|dj=0726.020|hdz=42316.050|uh=60DE|ud=24798}}
+* {{Han ref|kx=0391.150|dkj=10818|dj=0726.020|hdz=42316.050|uh=60DE|ud=24798}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心08}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[きん]] (kin), [[こん]] (kon)|kun=[[よろこぶ]] (yorokobu)}}
+* {{ja-readings|on=[[きん]] (kin), [[こん]] (kon)|kun=[[よろこぶ]] (yorokobu)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[wū]] ([[wu1]]), [[wù]] ([[wu4]]), [[xīn]] ([[xin1]])|wg=wu<sup>1</sup>, wu<sup>4</sup>, hsin<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惞]]
