--- a/en/慞/慞.15730.wikitext
+++ b/en/慞/慞.15730.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=11|sn=14|four=9004<sub>6</sub>|canj=心卜廿十 (PYTJ)}}
+
 # {{defn|Han|sort=心11}}
+
 ====References====
-{{Han ref|kx=0399.040|dkj=11102|dj=0738.210|hdz=42347.120|uh=615E|ud=24926|bh=E1C5|bd=57797}}
+* {{Han ref|kx=0399.040|dkj=11102|dj=0738.210|hdz=42347.120|uh=615E|ud=24926|bh=E1C5|bd=57797}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心11}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[しょう]] (shō)|kun=[[おそれる]] (osoreru)}}
+* {{ja-readings|on=[[しょう]] (shō)|kun=[[おそれる]] (osoreru)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[cào]] ([[cao4]]), [[zhāng]] ([[zhang1]])|wg=ts'ao<sup>4</sup>, chang<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:慞]]
