--- a/en/偩/偩.11129.wikitext
+++ b/en/偩/偩.11129.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2728<sub>6</sub>|canj=人弓月金 (ONBC)}}
+
 # follow
+
 ====References====
-{{Han ref|kx=0111.220|dkj=00886|dj=0237.190|hdz=10193.090|uh=5069|ud=20585|bh=D45E|bd=54366}}
+* {{Han ref|kx=0111.220|dkj=00886|dj=0237.190|hdz=10193.090|uh=5069|ud=20585|bh=D45E|bd=54366}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=fu6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ふう]] (hū), [[ぶ]] (bu)|kun=[[よりかたどる]] (yorikatadoru), [[たのむ]] (tanomu)}}
+* {{ja-readings|on=[[ふう]] (hū), [[ぶ]] (bu)|kun=[[よりかたどる]] (yorikatadoru), [[たのむ]] (tanomu)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=부|rv=bu|mr=pu}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[fù]] ([[fu4]])|wg=fu<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偩]]
