--- a/en/旲/旲.16922.wikitext
+++ b/en/旲/旲.16922.wikitext
@@ -1,28 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=03|sn=7|four=6043<sub>0</sub>|canj=日大 (AK)}}
+
 # {{defn|Han|sort=日03}}
+
 ====References====
-{{Han ref|kx=0490.070|dkj=13753|dj=0851.080|hdz=21487.050|uh=65F2|ud=26098|bh=CAFB|bd=51963}}
+* {{Han ref|kx=0490.070|dkj=13753|dj=0851.080|hdz=21487.050|uh=65F2|ud=26098|bh=CAFB|bd=51963}}
 
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日03}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[たい]] (tai), [[だい]] (dai), [[えい]] (ei)|kun=[[ひかげ]] (hikage), [[おおきい]] (ookii)}}
+* {{ja-readings|on=[[たい]] (tai), [[だい]] (dai), [[えい]] (ei)|kun=[[ひかげ]] (hikage), [[おおきい]] (ookii)}}
 
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=대|eumhun=|rv=dae|mr=tae|y=tay}}
+
 # {{defn|Korean}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[tái]] ([[tai2]])|wg=t'ai<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:旲]]
