--- a/en/坲/坲.13045.wikitext
+++ b/en/坲/坲.13045.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=4512<sub>7</sub>|canj=土中中弓 (GLLN)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0226.320|dkj=04987|dj=0462.090|hdz=10435.140|uh=5772|ud=22386|bh=CBF3|bd=52211}}
+* {{Han ref|kx=0226.320|dkj=04987|dj=0462.090|hdz=10435.140|uh=5772|ud=22386|bh=CBF3|bd=52211}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ふつ]] (futsu), [[ぶち]] (buchi), [[へつ]] (hetsu), [[べち]] (bechi)|kun=}}
+* {{ja-readings|on=[[ふつ]] (futsu), [[ぶち]] (buchi), [[へつ]] (hetsu), [[べち]] (bechi)|kun=}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[fó]] ([[fo2]])|wg=fo<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坲]]
