--- a/en/旾/旾.16934.wikitext
+++ b/en/旾/旾.16934.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=|canj=心山日 (PUA)}}
+
 # {{defn|Han|sort=日04}}
+
 ====References====
-{{Han ref|kx=0490.280|dkj=13778|dj=0851.270|hdz=21489.070|uh=65FE|ud=26110}}
+* {{Han ref|kx=0490.280|dkj=13778|dj=0851.270|hdz=21489.070|uh=65FE|ud=26110}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[しゅん]] (shun)|kun=[[はる]] (haru)}}
+* {{ja-readings|on=[[しゅん]] (shun)|kun=[[はる]] (haru)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[chūn]] ([[chun1]])|wg=ch'un<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:旾]]
