--- a/en/惟/惟.15604.wikitext
+++ b/en/惟/惟.15604.wikitext
@@ -1,31 +1,51 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=08|sn=11|four=9001<sub>4</sub>|canj=心人土 (POG)}}
+
 # [[but]], [[however]], [[nevertheless]]
 # [[only]]
+
 ====References====
-{{Han ref|kx=0391.170|dkj=10820|dj=0726.030|hdz=42316.030|uh=60DF|ud=24799|bh=B1A9|bd=45481}}
+* {{Han ref|kx=0391.170|dkj=10820|dj=0726.030|hdz=42316.030|uh=60DF|ud=24799|bh=B1A9|bd=45481}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=wai4}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心08}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[い]] (i), [[ゆい]] (yui), [[び]] (bi)|kun=[[おもう]] (omou), [[おもうに]] (omouni), [[これ]] (kore)}}
+* {{ja-readings|on=[[い]] (i), [[ゆい]] (yui), [[び]] (bi)|kun=[[おもう]] (omou), [[おもうに]] (omouni), [[これ]] (kore)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=유|eumhun=|rv=yu|mr=yu|y=yu}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[wéi]] ([[wei2]])|wg=wei<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惟]]
