--- a/en/垓/垓.13079.wikitext
+++ b/en/垓/垓.13079.wikitext
@@ -1,37 +1,54 @@
 {{see|陔}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=4018<sub>2</sub>|canj=土卜女人 (GYVO)}}
-# [[border]], [[boundary]], [[frontier]]
 
+# [[border]], [[boundary]], [[frontier]]
 
 * Chinese numeral:
 ** Next: [[秭]]
+
 ====References====
-{{Han ref|kx=0227.400|dkj=05040|dj=0463.260|hdz=10441.130|uh=5793|ud=22419|bh=ABB2|bd=43954}}
+* {{Han ref|kx=0227.400|dkj=05040|dj=0463.260|hdz=10441.130|uh=5793|ud=22419|bh=ABB2|bd=43954}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=goi1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土06}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[がい]] (''gai''), [[かい]] (''kai'')|kun=[[はて]] (''hate'')}}
+* {{ja-readings|on=[[がい]] (''gai''), [[かい]] (''kai'')|kun=[[はて]] (''hate'')}}
+
 ----
 
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=해|rv=hae|mr=hae}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[gāi]] ([[gai1]]), [[hòu]] ([[hou4]])|wg=kai<sup>1</sup>, hou<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垓]]
