--- a/en/慗/慗.15723.wikitext
+++ b/en/慗/慗.15723.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=11|sn=15|four=|canj=木大心 (DKP), XXX木大 (XXXDK)}}
+
 # {{defn|Han|sort=心11}}
+
 ====References====
-{{Han ref|kx=0398.370|dkj=11093|dj=0738.020|hdz=42341.120|uh=6157|ud=24919}}
+* {{Han ref|kx=0398.370|dkj=11093|dj=0738.020|hdz=42341.120|uh=6157|ud=24919}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[chì]] ([[chi4]])|wg=ch'ih<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:慗]]
