--- a/en/愞/愞.15665.wikitext
+++ b/en/愞/愞.15665.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=|canj=心一月大 (PMBK)}}
+
 # [[timid]], [[apprehensive]]
+
 ====References====
-{{Han ref|kx=0395.200|dkj=10951|dj=0733.040|hdz=42327.040|uh=611E|ud=24862}}
+* {{Han ref|kx=0395.200|dkj=10951|dj=0733.040|hdz=42327.040|uh=611E|ud=24862}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ぜん]] (zen), [[ねん]] (nen), [[た]] (ta), [[な]] (na)|kun=[[よわい]] (yowai), [[おそれる]] (osoreru)}}
+* {{ja-readings|on=[[ぜん]] (zen), [[ねん]] (nen), [[た]] (ta), [[な]] (na)|kun=[[よわい]] (yowai), [[おそれる]] (osoreru)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[nuò]] ([[nuo4]])|wg=no<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愞]]
