--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -1,36 +1,51 @@
 ==Translingual==
 {{Han stroke|[[Image:想-order.gif]]}}
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=4633<sub>0</sub>|canj=木山心 (DUP)|ids=⿱[[相]][[心]]}}
+
 # [[think]], [[speculate]], [[plan]], [[consider]]
+
 ====References====
-{{Han ref|kx=0392.260|dkj=10858|dj=0728.100|hdz=42320.110|uh=60F3|ud=24819|bh=B751|bd=46929}}
+* {{Han ref|kx=0392.260|dkj=10858|dj=0728.100|hdz=42320.110|uh=60F3|ud=24819|bh=B751|bd=46929}}
 
 ----
 
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=seung2}}
+
 # {{defn|Cantonese}}
 
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=3|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[そう]] (sō), [[そ]] (so)|kun=[[おもう]] (omou), [[おもい]] (omoi)}}
+* {{ja-readings|on=[[そう]] (sō), [[そ]] (so)|kun=[[おもう]] (omou), [[おもい]] (omoi)}}
 
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=상|eumhun=|rv=sang|mr=sang|y=sang}}
+
 # {{defn|Korean}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[xiǎng]] ([[xiang3]])|wg=hsiang<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[da:想]]
