--- a/en/惺/惺.15630.wikitext
+++ b/en/惺/惺.15630.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9601<sub>4</sub>|canj=心日竹一 (PAHM)}}
+
 # [[intelligent]], [[clever]], [[astute]]
+
 ====References====
-{{Han ref|kx=0393.040|dkj=10868|dj=0729.020|hdz=42328.020|uh=60FA|ud=24826|bh=B469|bd=46185}}
+* {{Han ref|kx=0393.040|dkj=10868|dj=0729.020|hdz=42328.020|uh=60FA|ud=24826|bh=B469|bd=46185}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=sing1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[せい]] (sei)|kun=[[さとる]] (satoru)}}
+* {{ja-readings|on=[[せい]] (sei)|kun=[[さとる]] (satoru)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=[[성]], [[황]]|eumhun=|rv=seong, hwang|mr=sŏng, hwang|y=seng, hwang}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[xīng]] ([[xing1]])|wg=hsing<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惺]]
