--- a/en/旯/旯.16919.wikitext
+++ b/en/旯/旯.16919.wikitext
@@ -1,22 +1,30 @@
 {{see|旭}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=02|sn=6|four=6041<sub>7</sub>|canj=日大弓 (AKN)}}
+
 # {{defn|Han|sort=日02}}
+
 ====References====
-{{Han ref|kx=0490.041|hdz=21485.060|uh=65EF|ud=26095|bh=C9ED|bd=51693}}
+* {{Han ref|kx=0490.041|hdz=21485.060|uh=65EF|ud=26095|bh=C9ED|bd=51693}}
 
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=lo1}}
+
 # {{defn|Cantonese}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[lá]] ([[la2]]), [[xù]] ([[xu4]])|wg=la<sup>2</sup>, hsü<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:旯]]
