--- a/en/愯/愯.15682.wikitext
+++ b/en/愯/愯.15682.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=9304<sub>7</sub>|canj=心人土水 (POGE)}}
+
 # {{defn|Han|sort=心10}}
+
 ====References====
-{{Han ref|kx=0396.180|dkj=10992|dj=0735.040|hdz=42337.110|uh=612F|ud=24879|bh=DD6E|bd=56686}}
+* {{Han ref|kx=0396.180|dkj=10992|dj=0735.040|hdz=42337.110|uh=612F|ud=24879|bh=DD6E|bd=56686}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[sǒng]] ([[song3]])|wg=sung<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愯]]
