--- a/en/旱/旱.16921.wikitext
+++ b/en/旱/旱.16921.wikitext
@@ -1,65 +1,81 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=03|sn=7|four=6040<sub>1</sub>|canj=日一十 (AMJ)}}
+
 # [[drought]]
 # [[dry]]
 # dry [[land]]
+
 ====References====
-{{Han ref|kx=0490.060|dkj=13752|dj=0851.070|hdz=21486.080|uh=65F1|ud=26097|bh=A7F2|bd=42994}}
+* {{Han ref|kx=0490.060|dkj=13752|dj=0851.070|hdz=21486.080|uh=65F1|ud=26097|bh=A7F2|bd=42994}}
 
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=hon5}}
+
 # {{defn|Cantonese}}
 
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日03}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[かん]] (kan)|kun=[[ひでり]] (hideri)}}
+* {{ja-readings|on=[[かん]] (kan)|kun=[[ひでり]] (hideri)}}
 
 ====Compounds====
-*[[旱魃]]
+* [[旱魃]]
 
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=한|eumhun=|rv=han|mr=han|y=han}}
+
 # {{defn|Korean}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[chǔn]] ([[chun3]]), [[hàn]] ([[han4]])|wg=ch'un<sup>3</sup>, han<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 ====Compounds====
-*[[旱冰]]
-*[[旱船]]
-*[[旱道]], [[旱道儿]]
-*[[旱稻]], [[旱稻儿]]
-*[[旱地]]
-*[[旱季]]
-*[[旱井]]
-*[[旱涝]]
-*[[旱涝保收]]
-*[[旱路]]
-*[[旱年]]
-*[[旱桥]]
-*[[旱情]]
-*[[旱伞]]
-*[[旱生植物]]
-*[[旱獭]]
-*[[旱天]]
-*[[旱田]]
-*[[旱象]]
-*[[旱鸭子]]
-*[[旱烟]]
-*[[旱烟袋]]
-*[[旱秧田]]
-*[[旱灾]]
+* [[旱冰]]
+* [[旱船]]
+* [[旱道]], [[旱道儿]]
+* [[旱稻]], [[旱稻儿]]
+* [[旱地]]
+* [[旱季]]
+* [[旱井]]
+* [[旱涝]]
+* [[旱涝保收]]
+* [[旱路]]
+* [[旱年]]
+* [[旱桥]]
+* [[旱情]]
+* [[旱伞]]
+* [[旱生植物]]
+* [[旱獭]]
+* [[旱天]]
+* [[旱田]]
+* [[旱象]]
+* [[旱鸭子]]
+* [[旱烟]]
+* [[旱烟袋]]
+* [[旱秧田]]
+* [[旱灾]]
 
 [[fr:旱]]
