--- a/en/圾/圾.12993.wikitext
+++ b/en/圾/圾.12993.wikitext
@@ -1,32 +1,52 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=4714<sub>7</sub>|canj=土弓竹水 (GNHE)}}
+
 # [[garbage]], [[rubbish]]
 # [[shaking]]
 # [[danger]]
+
 ====References====
-{{Han ref|kx=0224.220|dkj=04906|dj=0459.100|hdz=10420.040|uh=573E|ud=22334|bh=A7A3|bd=42915}}
+* {{Han ref|kx=0224.220|dkj=04906|dj=0459.100|hdz=10420.040|uh=573E|ud=22334|bh=A7A3|bd=42915}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=saap3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ぎゅう]] (gyū), [[ごう]] (gō), [[しょく]] (shoku), [[せい]] (sei)|kun=[[あやうい]] (ayaui)}}
+* {{ja-readings|on=[[ぎゅう]] (gyū), [[ごう]] (gō), [[しょく]] (shoku), [[せい]] (sei)|kun=[[あやうい]] (ayaui)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=급|rv=geup|mr=kŭp}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jí]] ([[ji2]])|wg=chi<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:圾]]
