--- a/en/垍/垍.13072.wikitext
+++ b/en/垍/垍.13072.wikitext
@@ -1,13 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=|canj=土竹月山 (GHBU)}}
+
 # {{defn|Han|sort=土06}}
+
 ====References====
-{{Han ref|kx=0227.310|dkj=05032|dj=0463.200|hdz=10439.170|uh=578D|ud=22413}}
+* {{Han ref|kx=0227.310|dkj=05032|dj=0463.200|hdz=10439.170|uh=578D|ud=22413}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jì]] ([[ji4]]), [[léi]] ([[lei2]]), [[lèi]] ([[lei4]]), [[lǜ]] ([[lü4]])|wg=chi<sup>4</sup>, lei<sup>2</sup>, lei<sup>4</sup>, lü<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垍]]
