--- a/en/慜/慜.15728.wikitext
+++ b/en/慜/慜.15728.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=11|sn=15|four=|canj=人大心 (OKP), X人大心 (XOKP)}}
+
 # name of a monk in Tang dynasty
+
 ====References====
-{{Han ref|kx=0399.020|dkj=11099|dj=0738.080|hdz=42343.050|uh=615C|ud=24924}}
+* {{Han ref|kx=0399.020|dkj=11099|dj=0738.080|hdz=42343.050|uh=615C|ud=24924}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[mǐn]] ([[min3]])|wg=min<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:慜]]
