--- a/en/圶/圶.12984.wikitext
+++ b/en/圶/圶.12984.wikitext
@@ -1,13 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=03|sn=6|four=|canj=大土 (KG)}}
+
 # {{defn|Han|sort=土03}}
+
 ====References====
-{{Han ref|kx=0224.180|dkj=04897|hdz=10419.020|uh=5736|ud=22326}}
+* {{Han ref|kx=0224.180|dkj=04897|hdz=10419.020|uh=5736|ud=22326}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[qià]] ([[qia4]])|wg=ch'ia<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:圶]]
