--- a/en/偺/偺.11146.wikitext
+++ b/en/偺/偺.11146.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2826<sub>4</sub>|canj=人竹人日 (OHOA), 人竹卜日 (OHYA)}}
+
 # us
+
 ====References====
-{{Han ref|kx=0112.071|dkj=00923|hdz=10194.040|uh=507A|ud=20602|bh=B0AF|bd=45231}}
+* {{Han ref|kx=0112.071|dkj=00923|hdz=10194.040|uh=507A|ud=20602|bh=B0AF|bd=45231}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=ja1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[さん]] (san)|kun=}}
+* {{ja-readings|on=[[さん]] (san)|kun=}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[zá]] ([[za2]])|wg=tsa<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偺]]
