--- a/en/慑/慑.15717.wikitext
+++ b/en/慑/慑.15717.wikitext
@@ -1,22 +1,30 @@
 {{see|懾}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心尸十水 (PSJE)}}
+
 # [[afraid]], [[scared]], [[fearful]]
+
 ====References====
-{{Han ref|kx=0398.261|hdz=42335.170|uh=6151|ud=24913}}
+* {{Han ref|kx=0398.261|hdz=42335.170|uh=6151|ud=24913}}
 
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=jip3, sip3}}
+
 # {{defn|Cantonese}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|tra=懾|pin=[[shè]] ([[she4]])|wg=she<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:慑]]
