--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -22,16 +22,17 @@
 #: ''The dentist  pulled out the decayed tooth and put in a '''bridge'''.''
 # {{nautical}} An [[elevated]] [[platform]] above the upper [[deck]] of a [[mechanically]] [[propel]]led [[ship]] from which it is [[navigate]]d and from which all activities on deck can be seen and controlled by the [[captain]], etc; smaller ships have a [[wheelhouse]], and [[sailing ship]]s were controlled from a [[quarterdeck]].
 #: ''The first officer is on the '''bridge'''.''
+# {{music}} The piece, on [[string intrument]]s, that support the [[string]]s from the [[sounding board]].
 # {{computing}} A device which connects two or more [[computer]] [[bus|buses]], typically in a transparent manner.
 #: ''This chip is the '''bridge''' between the front-side bus and the I/O bus.''
 # {{communication}} A system which connects two or more [[LAN|local area networks]] at layer 2.
 #: ''The LAN '''bridge''' uses a spanning tree algorithm.''
 # {{music}} A song contained within another song, often demarcated by meter, key, or melody.
 #: ''The lyrics in the song's '''bridge''' inverted its meaning.''
-# {{chemistry}} a [[valence bond]], [[atom]] or [[chain]] of atoms that [[connect]]s two different parts of a [[molecule]]; the atoms so connected being [[bridgehead]]s
-# {{electronics}} an unintended [[solder]] [[connection]] between two or more [[component]]s or pins
+# {{chemistry}} A [[valence bond]], [[atom]] or [[chain]] of atoms that [[connect]]s two different parts of a [[molecule]]; the atoms so connected being [[bridgehead]]s.
+# {{electronics}} An unintended [[solder]] [[connection]] between two or more [[component]]s or pins.
 # Any of several [[electrical]] [[device]]s that [[measure]] characteristics such as [[impedance]] and [[inductance]] by [[balancing]] different parts of a [[circuit]]
-# {{context|sports|billiards|snooker|pool}} A particular form of one hand placed on the table to support the [[cue]] when making a shot in cue sports.
+# {{billiards|snooker|pool}} A particular form of one hand placed on the table to support the [[cue]] when making a shot in cue sports.
 
 =====Translations=====
 {{trans-top|construction or natural feature that spans a divide}}
