--- a/en/偵/偵.11141.wikitext
+++ b/en/偵/偵.11141.wikitext
@@ -1,40 +1,59 @@
 {{see|侦}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2128<sub>6</sub>|canj=人卜月金 (OYBC)|ids=⿰[[亻]][[貞]]}}
+
 # spy, reconnoiter
 # detective
+
 ====References====
-{{Han ref|kx=0111.350|dkj=00898|dj=0238.080|hdz=10189.010|uh=5075|ud=20597|bh=B0BB|bd=45243}}
+* {{Han ref|kx=0111.350|dkj=00898|dj=0238.080|hdz=10189.010|uh=5075|ud=20597|bh=B0BB|bd=45243}}
+
 ----
 
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=jing1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=c|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[てい]] ([[tei]])|kun=[[うかがう]] ([[ukagau]])}}
+* {{ja-readings|on=[[てい]] ([[tei]])|kun=[[うかがう]] ([[ukagau]])}}
+
 ====Compounds====
-*[[偵察]]
-*[[偵知]]
-*[[探偵]]
-*[[内偵]]
-*[[密偵]]
+* [[偵察]]
+* [[偵知]]
+* [[探偵]]
+* [[内偵]]
+* [[密偵]]
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=정|rv=jeong|mr=chŏng}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|sim=侦|pin=[[zhēn]] ([[zhen1]]), [[zhēng]] ([[zheng1]])|wg=chen<sup>1</sup>, cheng<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偵]]
