--- a/en/惱/惱.15622.wikitext
+++ b/en/惱/惱.15622.wikitext
@@ -1,32 +1,51 @@
 {{see|悩|恼}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9206<sub>3</sub>|canj=心女女田 (PVVW)}}
+
 # angered, filled with hate
+
 ====References====
-{{Han ref|kx=0392.240|dkj=10856|dj=0728.080|hdz=42332.160|uh=60F1|ud=24817|bh=B46F|bd=46191}}
+* {{Han ref|kx=0392.240|dkj=10856|dj=0728.080|hdz=42332.160|uh=60F1|ud=24817|bh=B46F|bd=46191}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=nou5}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[のう]] (nō)|kun=[[なやむ]] (nayamu)}}
+* {{ja-readings|on=[[のう]] (nō)|kun=[[なやむ]] (nayamu)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=뇌|eumhun=|rv=noe|mr=noe|y=noy}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|sim=恼|pin=[[nǎo]] ([[nao3]])|wg=nao<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惱]]
