--- a/en/愳/愳.15686.wikitext
+++ b/en/愳/愳.15686.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=14|four=|canj=月山心 (BUP)}}
+
 # {{defn|Han|sort=心10}}
+
 ====References====
-{{Han ref|kx=0396.280|dkj=11004|dj=0735.160|hdz=42333.120|uh=6133|ud=24883}}
+* {{Han ref|kx=0396.280|dkj=11004|dj=0735.160|hdz=42333.120|uh=6133|ud=24883}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jù]] ([[ju4]])|wg=chü<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愳]]
