--- a/en/偘/偘.11112.wikitext
+++ b/en/偘/偘.11112.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人口口口 (ORRR)}}
+
 # ancient family name
+
 ====References====
-{{Han ref|kx=0110.260|dkj=00858|dj=0236.100|hdz=10191.080|uh=5058|ud=20568}}
+* {{Han ref|kx=0110.260|dkj=00858|dj=0236.100|hdz=10191.080|uh=5058|ud=20568}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[かん]] (kan)|kun=}}
+* {{ja-readings|on=[[かん]] (kan)|kun=}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=간|rv=gan|mr=kan}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[kǎn]] ([[kan3]])|wg=k'an<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偘]]
