--- a/en/倻/倻.11080.wikitext
+++ b/en/倻/倻.11080.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人尸十中 (OSJL)}}
+
 # phonetic used in Korean place names
+
 ====References====
-{{Han ref|kx=0112.071|hdz=10171.030|uh=503B|ud=20539}}
+* {{Han ref|kx=0112.071|hdz=10171.030|uh=503B|ud=20539}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人08}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[や]] (ya)|kun=[[や]] (ya)}}
+* {{ja-readings|on=[[や]] (ya)|kun=[[や]] (ya)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=야|rv=ya|mr=ya}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yē]] ([[ye1]])|wg=yeh<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:倻]]
