--- a/en/偒/偒.11106.wikitext
+++ b/en/偒/偒.11106.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人日一竹 (OAMH)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0110.200|dkj=00852|dj=0236.040|hdz=10190.010|uh=5052|ud=20562}}
+* {{Han ref|kx=0110.200|dkj=00852|dj=0236.040|hdz=10190.010|uh=5052|ud=20562}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[とう]] (tō)|kun=[[まつすぐ]] (matsusugu)}}
+* {{ja-readings|on=[[とう]] (tō)|kun=[[まつすぐ]] (matsusugu)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=탕|rv=tang|mr=t'ang}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[tǎng]] ([[tang3]])|wg=t'ang<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偒]]
