--- a/en/倳/倳.11066.wikitext
+++ b/en/倳/倳.11066.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=2520<sub>7</sub>|canj=人十中弓 (OJLN)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0109.120|dkj=00802|dj=0232.100|hdz=10172.050|uh=5033|ud=20531|bh=D0D1|bd=53457}}
+* {{Han ref|kx=0109.120|dkj=00802|dj=0232.100|hdz=10172.050|uh=5033|ud=20531|bh=D0D1|bd=53457}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人08}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[し]] (shi)|kun=[[さす]] (sasu), [[さしこむ]] (sashikomu)}}
+* {{ja-readings|on=[[し]] (shi)|kun=[[さす]] (sasu), [[さしこむ]] (sashikomu)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=사|rv=sa|mr=sa}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[zì]] ([[zi4]])|wg=tzu<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:倳]]
