--- a/en/坼/坼.13055.wikitext
+++ b/en/坼/坼.13055.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=4214<sub>1</sub>|canj=土竹一卜 (GHMY)}}
+
 # [[split]], [[tear]], [[open]]
+
 ====References====
-{{Han ref|kx=0227.100|dkj=05006|dj=0462.260|hdz=10433.020|uh=577C|ud=22396|bh=A95C|bd=43356}}
+* {{Han ref|kx=0227.100|dkj=05006|dj=0462.260|hdz=10433.020|uh=577C|ud=22396|bh=A95C|bd=43356}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=chaak3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[たく]] (taku), [[ちゃく]] (chaku)|kun=[[さける]] (sakeru), [[わかれる]] (wakareru), [[ひらく]] (hiraku), [[さけめ]] (sakeme)}}
+* {{ja-readings|on=[[たく]] (taku), [[ちゃく]] (chaku)|kun=[[さける]] (sakeru), [[わかれる]] (wakareru), [[ひらく]] (hiraku), [[さけめ]] (sakeme)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=탁|rv=tak|mr=t'ak}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[chè]] ([[che4]]), [[la]] ([[la5]])|wg=ch'e<sup>4</sup>, la<sup>5</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坼]]
