--- a/en/慙/慙.15725.wikitext
+++ b/en/慙/慙.15725.wikitext
@@ -1,28 +1,43 @@
 {{see|慚}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=11|sn=15|four=|canj=十中心 (JLP)}}
+
 # [[ashamed]], [[humiliated]]
 # [[shameful]]
+
 ====References====
-{{Han ref|kx=0398.390|dkj=11095|dj=0738.040|hdz=42341.090|uh=6159|ud=24921}}
+* {{Han ref|kx=0398.390|dkj=11095|dj=0738.040|hdz=42341.090|uh=6159|ud=24921}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心11}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ざん]] (zan)|kun=[[はじる]] (hajiru), [[はじ]] (haji)}}
+* {{ja-readings|on=[[ざん]] (zan)|kun=[[はじる]] (hajiru), [[はじ]] (haji)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=참|eumhun=|rv=cham|mr=ch'am|y=cham}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[cán]] ([[can2]])|wg=ts'an<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:慙]]
