--- a/en/愃/愃.15639.wikitext
+++ b/en/愃/愃.15639.wikitext
@@ -18,7 +18,7 @@
 # {{defn|Japanese}}
 
 ====Readings====
-{{ja-readings|on=[[けん]] (ken), [[せん]] (sen), [[かん]] (kan)|kun=[[ゆたか]] (yutaka), [[こころよい]] (kokoroyoi), [[わすれる]] (wasureru)}}
+* {{ja-readings|on=[[けん]] (ken), [[せん]] (sen), [[かん]] (kan)|kun=[[ゆたか]] (yutaka), [[こころよい]] (kokoroyoi), [[わすれる]] (wasureru)}}
 
 ----
 
