--- a/en/慎/慎.15713.wikitext
+++ b/en/慎/慎.15713.wikitext
@@ -1,27 +1,42 @@
 {{see|愼}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=9408<sub>1</sub>|canj=心十月金 (PJBC)}}
+
 # act with care, be cautious
+
 ====References====
-{{Han ref|kx=0398.261|dkj=11024|dj=0735.350|hdz=42336.020|uh=614E|ud=24910|bh=B756|bd=46934}}
+* {{Han ref|kx=0398.261|dkj=11024|dj=0735.350|hdz=42336.020|uh=614E|ud=24910|bh=B756|bd=46934}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=san6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=c|rs=心10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[しん]] (shin)|kun=[[つつしむ]] (tsutsushimu), [[つつしみ]] (tsutsushimi)}}
+* {{ja-readings|on=[[しん]] (shin)|kun=[[つつしむ]] (tsutsushimu), [[つつしみ]] (tsutsushimi)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[shèn]] ([[shen4]])|wg=shen<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:慎]]
