--- a/en/慆/慆.15705.wikitext
+++ b/en/慆/慆.15705.wikitext
@@ -1,31 +1,51 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=9207<sub>7</sub>|canj=心月竹X (PBHX)}}
+
 # [[excessive]], [[dissolute]]
 # [[delighted]]
+
 ====References====
-{{Han ref|kx=0397.220|dkj=11044|dj=0736.150|hdz=42338.040|uh=6146|ud=24902|bh=DD6D|bd=56685}}
+* {{Han ref|kx=0397.220|dkj=11044|dj=0736.150|hdz=42338.040|uh=6146|ud=24902|bh=DD6D|bd=56685}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=tou1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[とう]] (tō)|kun=[[よろこぶ]] (yorokobu)}}
+* {{ja-readings|on=[[とう]] (tō)|kun=[[よろこぶ]] (yorokobu)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=도|eumhun=|rv=do|mr=to|y=to}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[qiè]] ([[qie4]]), [[tāo]] ([[tao1]])|wg=ch'ieh<sup>4</sup>, t'ao<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:慆]]
