/* Translations */ corrected finnish translation <i.e.#3428268>

--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -25,7 +25,7 @@ From {{L.}} {{term|lang=la|id est||that is}}.
 *Bulgarian: [[т.е.]] ([[тоест]], ''toest'')
 *Danish: [[dvs.]] {{i|[[det]] [[vil]] [[sige]]}}
 *Dutch: {{t|nl|d.w.z.}} {{i|[[dat]] [[wil]] [[zeggen]]}}
-*Finnish: [[esim.]] {{i|[[esimerkiksi]]}}
+*Finnish: [[ts.]] {{i|[[toisin sanoen]]}}
 *French: [[c.-à-d.]]
 *German: [[d. h.]] {{i|[[das heißt]]}}
 *Greek: [[δηλαδή]], [[ήτοι]], [[τουτέστιν]]
