--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -115,6 +115,7 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 {{trans-top|To orgasm}}
 * Finnish: [[tulla]], [[saada]] [[orgasmi]]
 * Polish: [[dochodzić]] / [[dojść]]
+* Italian: [[venire]]
 {{trans-mid}}
 {{trans-bottom}}
 
