--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -19,6 +19,7 @@
 # Term of endearment, especially towards a subject who has performed a favour of an act of kindness without expectation of reciprocity.
 #: ''Thanks for helping me wash the car. You're a '''brick'''.''
 # {{colloquial}} a [[mobile phone]], especially one that is large and/or heavy relative to current models
+# {{colloquial}} an external [[power supply]] consisting of a small box with an integral [[male]] [[power plug]] and an attached [[electric cord]] terminating in a power plug
 
 ====Translations====
 {{trans-top|hardened block used for building}}
