--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -131,7 +131,7 @@
 
 # {{slang}} To hit someone using a brick.
 # {{rfv-sense}} {{slang}} To be a high state of anxiety: "Bricking it"
-# {{rfv-sense}} {{slang}} To make an electronic device nonfunctional and unrepareable, rendering it as useful as a brick.
+# {{rfv-sense}} {{slang}} To make an electronic device nonfunctional and usually unrepareable, resulting in a device with a utility on par with a masonry brick.
 #:''My VCR was '''bricked''' during the lightning storm''.
 
 ====Translations====
