--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -1,10 +1,6 @@
 {{wikipedia|dab=straight}}
 ==English==
 
-===Spellings===
-{{rfc-header|Spellings}}
-* [[streight]] (''obsolete'')
-
 ===Etymology===
 {{ME.}} ''[[streght]]'' (Anglo Saxon ''streht''), the past participle of Middle English ''strechen'' (Anglo-Saxon ''streccan''), to stretch.
 
@@ -15,6 +11,9 @@
 
 ====Homophones====
 * [[strait]]
+
+===Alternative spellings===
+* [[streight]] (''obsolete'')
 
 ===Adjective===
 {{en-adj|straighter|straightest}}
@@ -132,6 +131,10 @@
 * {{ttbc|Welsh}}: [[uniawn]]
 {{bottom}}
 
+====Derived terms====
+*[[straight line]]
+*[[straightness]]
+
 ===Adverb===
 '''straight''' ({{compar}}: '''[[straighter]]''', {{superl}}: '''[[straightest]]''')
 
@@ -153,6 +156,8 @@
 * [[Telugu]]: [[తిన్నగా]] (tinnagaa), [[సూటిగా]] (sootigaa)
 {{trans-bot}}
 
+====Derived terms====
+*[[straight up]]
 ===Noun===
 {{en-noun}}
 
@@ -183,6 +188,9 @@
 * {{ttbc|Dutch}}: [[straat]]
 {{mid}}
 {{bottom}}
+
+====Derived terms====
+*[[straight flush]]
 
 [[Category:1000 English basic words]]
 [[Category:English homophones]]
