--- a/en/慈/慈.15707.wikitext
+++ b/en/慈/慈.15707.wikitext
@@ -30,6 +30,8 @@
 ===Hanzi===
 {{cmn-hanzi|pin=[[cí]] ([[ci2]])|wg=tz'u<sup>2</sup>}}
 # {{defn|Mandarin}}
+====Compounds====
+*[[慈菇]] ([[cígū]])
 
 [[fr:慈]]
 [[hu:慈]]
