--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -55,7 +55,7 @@ From {{OF.}} ''[[coster]]'' (modern: ''[[coût]]'').
 # To [[incur]] a [[charge]], a [[price]].
 
 ====Translations====
-{{trans-top}}
+{{trans-top|to incur a charge, a price}}
 * Dutch: {{t+|nl|kosten}}
 * Finnish: {{t+|fi|maksaa}}
 * French: {{t+|fr|coûter}}
