/* Verb */ ich las, du las(es?)t, wir lasen, ihr last <lies#3435119>

--- a/en/l/lies.16986.wikitext
+++ b/en/l/lies.16986.wikitext
@@ -23,8 +23,7 @@
 ==German==
 ===Verb===
 '''lies'''
-# past tense singular of [[lesen]]
-# imperative singular of lesen
+# imperative singular of [[lesen]]
 
 ----
 
