--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -35,18 +35,20 @@
 
 ====Translations====
 {{trans-top|the sound caused by the discharge of atmospheric electrical charge}}
+*Chinese: [[雷]] (léi)
 *Czech: [[hrom]] {{m}}, [[zahřmění]] {{n}}
+*Dutch: [[donder]] {{m}}
 *Finnish: [[ukkonen]]
 *French: [[tonnerre]] {{m}}
 *German: [[Donner]] {{m}}
 *Italian: [[tuono]] {{m}}
-*Japanese: [[雷]] ([[かみなり]], kaminarí)
+*Japanese: [[雷]] ([[かみなり]] (kaminarí), [[雷鳴]] (raimei)
 *Korean: [[우레]] (ure)
-{{trans-mid}}
 *Polish: [[grzmot]] {{m}}
+{{trans-mid}}
 *Portuguese: [[trovão]] {{m}}
 *Russian: [[гром]] (grom) {{m}}
-*[[Scottish Gaelic]]: [[tàirneanach]] {{f}}
+*Scottish Gaelic: [[tàirneanach]] {{f}}
 *Serbian: [[grom]], [[grmljavina]]
 *Slovene: [[grom]] {{m}}, [[grmenje]] {{n}}
 *Spanish: [[trueno]] {{m}}
@@ -58,10 +60,10 @@
 {{trans-top|a sound resembling thunder}}
 *Czech: [[zahřmění]] {{n}}, [[hromová rána]] {{f}}, [[hřmění]] {{n}}
 *Finnish: [[jyrinä]]
-{{trans-mid}}
 *Polish: [[grzmot]] {{m}}
 *Russian: [[гром]] (grom) {{m}}, [[грохот]] (gróxot) {{m}}
-*[[Scottish Gaelic]]: [[tàirneanach]] {{f}}
+{{trans-mid}}
+*Scottish Gaelic: [[tàirneanach]] {{f}}
 *Serbian: [[grmnjevit]], [[grmnjevito]], [[zagrmeti]]
 *Slovene: [[grmenje]] {{n}}
 *Swedish: [[åskmuller]] {{n}}, [[muller]] {{n}}, [[åskdån]] {{n}}, [[dån]] {{n}}
@@ -70,10 +72,10 @@
 {{trans-top|a deep, rumbling noise}}
 *Czech: [[hřmění]] {{n}}, [[dunění]] {{n}}
 *Finnish: [[jyrinä]], [[jylinä]], [[pauhu]]
-{{trans-mid}}
 *Polish: [[grzmot]] {{m}}
 *Russian: [[рокот]] (rókot) {{m}}
-*[[Scottish Gaelic]]: [[tàirneanach]] {{f}}
+{{trans-mid}}
+*Scottish Gaelic: [[tàirneanach]] {{f}}
 *Slovene: [[grmenje]] {{n}}
 *Swedish: [[mullrande]] {{n}}, [[dån]] {{n}}
 {{trans-bottom}}
@@ -82,18 +84,15 @@
 {{checktrans}}
 *{{ttbc|Arabic}}: {{ARchar|[[رعد]]}} {{IPAchar|(raʕd)}} {{m}}
 *{{ttbc|Breton}}: [[kurun]] {{f}}, [[taran]] {{m}}
-*{{ttbc|Chinese}}: [[雷]] (léi)
-*{{ttbc|Dutch}}: [[donder]] {{m}}
 *{{ttbc|Esperanto}}: [[tondro]]
 *{{ttbc|Guaraní}}: [[sunu]]
 *{{ttbc|Hungarian}}: [[mennydörgés]]
 *{{ttbc|Indonesian}}: [[gelegar]], [[suara]] [[petir]], [[suara halilintar]]
 *{{ttbc|Interlingua}}: [[tonitro]]
-*{{ttbc|Japanese}}: [[雷鳴]] ([[らいめい]], raimei)
 *{{ttbc|Kinyarwanda}}: [[inkuba]]
 *{{ttbc|Kurdish}}: [[birûsk]] {{f}}
 *{{ttbc|Norwegian}}: [[torden]]
-*{{ttbc|Spanish}}: [[trueno]] {{m}}, [[rugiente]] {{m}}
+*[[rugiente]] {{m}}
 *{{ttbc|Telugu}}: [[ఉరుము]] (urumu)
 *{{ttbc|Thai}}: {{THchar|[[สายฟ้า]]}} (săaifáa)
 *{{ttbc|Tupinambá}}: [[tupã sununga]]
@@ -108,12 +107,13 @@
 
 ====Translations====
 {{trans-top|to make a noise like thunder}}
-*[[Breton]]: [[ober]] [[kurun]], [[taranal]] / [[taraniñ]]
+*Breton: [[ober]] [[kurun]], [[taranal]] / [[taraniñ]]
 *Czech: [[hřmít]]
 *Dutch: [[donderen]]
 *Finnish: [[ukkostaa]], [[jyristä]], [[pauhata]]
 *French: [[tonner]]
 *German: [[donnern]]
+*Italian: [[tuonare]]
 {{trans-mid}}
 *Japanese: [[雷が鳴る]] ([[かみなり]]が[[なる]], kaminarí ga narú)
 *Polish: [[grzmieć]], [[zagrzmieć]]
@@ -125,7 +125,7 @@
 {{trans-bottom}}
 
 {{trans-top|to talk with a loud, threatening voice}}
-*[[Breton]]: [[taranal]], [[taraniñ]]
+*Breton: [[taranal]], [[taraniñ]]
 *Czech: [[hřmít]], [[hromovat]]
 *Dutch: [[overdonderen]]
 *Finnish: [[jyristä]]
@@ -147,7 +147,6 @@
 *{{ttbc|Guaraní}}: [[sunu]]
 *{{ttbc|Indonesian}}: [[gelegar]]
 *{{ttbc|Interlingua}}: [[tonar]]
-*{{ttbc|Italian}}: [[tuonare]]
 *{{ttbc|Japanese}}: [[怒鳴る]] ([[どなる]], donaru)
 *{{ttbc|Latin}}: [[tonare]]
 *{{ttbc|Norwegian}}: [[tordne]]
