--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -65,6 +65,7 @@ flexed form of [[blond]]
 # {{context|Canadian French|slang|lang=fr}} [[girlfriend]]
 
 ----
+TT or Tyannah
 
 ==Swedish==
 ===Adjective===
