--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -11,7 +11,7 @@ In the English language, it is only one a few distinct words where the gender di
 
 ===Noun===
 {{en-noun}}
-stupid person(Tyannah)
+stupid person(emily)
 # A person (usually a woman) of [[fair]] skin and hair.
 # The hair color that appears [[yellow]], [[golden]], or lighter.
 # (color) A light [[yellow]]ish [[brown]] color.
