/* Translations */ fi <creep#3438484>

--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -79,6 +79,7 @@
 {{trans-top|grow across a surface rather than upwards}}
 *Danish: [[krybe]]
 *Dutch: [[kruipen]]
+*Finnish: [[ryömiä]]
 *German: [[kriechen]]
 {{trans-mid}}
 *Japanese: [[這う]] (hau), [[伝う]] (tsutau)
@@ -94,10 +95,11 @@
 {{trans-mid}}
 *Japanese: [[忍び寄る]] (shinobi-yoru)
 *Russian: [[стелиться]]
-*swedish: [[smyga]]
+*Swedish: [[smyga]]
 {{trans-bottom}}
 
 {{trans-top|change or deviate gradually}}
+*Finnish: [[hiipiä]]
 *Dutch: [[opschuiven]]
 *German: [[schleichen]]
 {{trans-mid}}
