/* Related terms */ <cut#3438906>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -187,6 +187,7 @@ Only colloquial expressions here! For normal language terms, see [[circumcised]]
 *[[cutting remark]]
 *[[cut up]]
 *[[undercut]]
+*[[reap]]
 {{rel-bottom}}
 
 ====Translations====
