* before Han ref <偾#3439773>

--- a/en/偾/偾.11150.wikitext
+++ b/en/偾/偾.11150.wikitext
@@ -1,24 +1,31 @@
 {{see|僨}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人十廿人 (OJTO)}}
+
 # ruin, cause fail
 # [[overthrown]]
+
 ====References====
-{{Han ref|kx=0112.071|hdz=10186.100|uh=507E|ud=20606}}
+* {{Han ref|kx=0112.071|hdz=10186.100|uh=507E|ud=20606}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=fan5}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|tra=僨|pin=[[fèn]] ([[fen4]]), [[kuǐ]] ([[kui3]])|wg=fen<sup>4</sup>, k'uei<sup>3</sup>}}
+
 # {{defn|Mandarin}}
-
-
-
 
 [[fr:偾]]
