/* Translations to be checked */ <branch#3442657>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -93,9 +93,7 @@ From {{OF.}} ''[[branche]]''.
 {{trans-mid}}
 {{trans-bottom}}
 
-=====Translations to be checked=====
-{{checktrans}}
-{{top}}
+{{checktrans-top}}
 *{{ttbc|Bulgarian}}: [[клон]] (klon) {{m}}, [[клонка]] (klonka) {{f}}, [[отрасъл]] (otrasăl) {{m}} (of business)
 *{{ttbc|French}}: [[branche]] {{f}}
 *{{ttbc|German}}: [[Zweig]] {{m}} (1 <small>(small)</small>, 2, 4)
@@ -103,7 +101,6 @@ From {{OF.}} ''[[branche]]''.
 *{{ttbc|Indonesian}}: [[cabang]]
 *{{ttbc|Italian}}: [[ramo]] {{m}}, [[filiale]] {{f}}
 *{{ttbc|Japanese}}: [[枝]] ([[えだ]], eda) (of tree), [[支店]] ([[してん]], shiten) (of company)
-{{mid}}
 *{{ttbc|Latvian}}: [[zars]] {{m}} (part of a tree)
 *{{ttbc|Old English}}: [[bog|bōg]] {{n}}
 *{{ttbc|Polish}}: [[gałąź]] {{f}}
@@ -114,7 +111,7 @@ From {{OF.}} ''[[branche]]''.
 *:Roman: [[grana#Serbian|grana]] {{f}} (1, 2)
 *{{ttbc|Spanish}}: [[rama]] {{f}}
 *{{ttbc|Swahili}}: [[tawi]]
-{{bottom}}
+{{trans-bottom}}
 
 ====Related terms====
 *[[branch banking]]
