/* Translations */ +Czech <branch#3442665>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -129,6 +129,7 @@ From {{OF.}} ''[[branche]]''.
 
 ====Translations====
 {{trans-top|to arise from the trunk or a larger branch of a tree}}
+* Czech: [[větvit]] se
 *German: [[abzweigen]]
 {{trans-mid}}
 {{trans-bottom}}
