* before Han ref <垒#3449079>

--- a/en/垒/垒.13078.wikitext
+++ b/en/垒/垒.13078.wikitext
@@ -1,20 +1,30 @@
 {{see|壘}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=|canj=戈戈戈土 (IIIG)}}
+
 # rampart, military wall
+
 ====References====
-{{Han ref|kx=0227.390|dkj=05039|dj=0463.240|hdz=10442.130|uh=5792|ud=22418}}
+* {{Han ref|kx=0227.390|dkj=05039|dj=0463.240|hdz=10442.130|uh=5792|ud=22418}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=leui5}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|tra=壘|pin=[[lěi]] ([[lei3]])|wg=lei<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垒]]
