/* Translations */ <United States of America#3452859>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -13,6 +13,7 @@
 
 ====Translations====
 {{top}}
+*Albanian: [[Shtete e Bashkuara të Amerikës]], [[SHBA]]
 *Arabic: {{ARchar|[[الولايات المتحدة الامريكية]]}} (al-wilayāt al-muttáħedat al-’amrikíyya), {{ARchar|[[الولايات المتحدة]]}} (al-wilayāt al-muttáħeda) {{f|p}}
 *Armenian: [[Ամերիկայի Միացյալ Նահանգներ]] (Amērikayi Miats‘yal Nahangnēr)
 *[[Azeri]]: [[Amerika Birləşmiş Ştatları]]
