* before Han ref <旸#3454429>

--- a/en/旸/旸.16928.wikitext
+++ b/en/旸/旸.16928.wikitext
@@ -1,16 +1,21 @@
 {{see|暘}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=03|sn=7|four=|canj=日弓尸竹 (ANSH)}}
+
 # {{defn|Han|sort=日03}}
+
 ====References====
-{{Han ref|kx=0490.221|hdz=21488.010|uh=65F8|ud=26104}}
+* {{Han ref|kx=0490.221|hdz=21488.010|uh=65F8|ud=26104}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|tra=暘|pin=[[yáng]] ([[yang2]])|wg=yang<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:旸]]
