* before Han ref, * before ja-readings <備#3457155>

--- a/en/備/備.11180.wikitext
+++ b/en/備/備.11180.wikitext
@@ -1,32 +1,51 @@
 {{see|备}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=2422<sub>7</sub>|canj=人廿竹月 (OTHB)}}
+
 # prepare, ready, perfect
+
 ====References====
-{{Han ref|kx=0113.210|dkj=00967|dj=0241.110|hdz=10200.080|uh=5099|ud=20633|bh=B3C6|bd=46022}}
+* {{Han ref|kx=0113.210|dkj=00967|dj=0241.110|hdz=10200.080|uh=5099|ud=20633|bh=B3C6|bd=46022}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=bei6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=5|rs=人10}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[び]] (bi)|kun=[[そなえる]] (sonaeru), [[そなわる]] (sonawaru), [[そなえ]] (sonae)}}
+* {{ja-readings|on=[[び]] (bi)|kun=[[そなえる]] (sonaeru), [[そなわる]] (sonawaru), [[そなえ]] (sonae)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=비|rv=bi|mr=pi}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|sim=备|pin=[[bèi]] ([[bei4]])|wg=pei<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:備]]
