* before Han ref <垦#3461263>

--- a/en/垦/垦.13098.wikitext
+++ b/en/垦/垦.13098.wikitext
@@ -1,20 +1,30 @@
 {{see|墾}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=|canj=日女土 (AVG)}}
+
 # cultivate, reclaim, to farm land
+
 ====References====
-{{Han ref|kx=0228.291|dkj=05055|dj=0464.120|hdz=10442.080|uh=57A6|ud=22438}}
+* {{Han ref|kx=0228.291|dkj=05055|dj=0464.120|hdz=10442.080|uh=57A6|ud=22438}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=han2}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|tra=墾|pin=[[kěn]] ([[ken3]])|wg=k'en<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垦]]
