* before Han ref, * before ja-readings <圦#3462547>

--- a/en/圦/圦.12989.wikitext
+++ b/en/圦/圦.12989.wikitext
@@ -1,16 +1,24 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=02|sn=5|four=|canj=土人 (GO)}}
+
 # (kokuji) water gate, spout
+
 ====References====
-{{Han ref|kx=0223.091|dkj=04879|dj=0455.110|hdz=10417.101|uh=5726|ud=22310}}
+* {{Han ref|kx=0223.091|dkj=04879|dj=0455.110|hdz=10417.101|uh=5726|ud=22310}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土02}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=|kun=[[いり]] (iri)}}
+* {{ja-readings|on=|kun=[[いり]] (iri)}}
 
 [[fr:圦]]
 [[ko:圦]]
