--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -87,6 +87,7 @@
 *Finnish: [[haava]], [[viilto]], [[viiltohaava]]
 *Hebrew: [[חתך]] (khetekh) {{m}}
 {{trans-mid}}
+*Italian: [[taglio]] {{m}}, [[incisione]] {{f}}
 *Kurdish: {{KUchar|[[برین]]}}
 *Swedish: [[skärsår]] {{n}}
 {{trans-bottom}}
@@ -96,12 +97,15 @@
 *Finnish: [[leikkaus]], [[viilto]], [[sivallus]]
 {{trans-mid}}
 *Hebrew: [[חיתוך]] (khitukh) {{m}}
+*Italian: [[taglio]] {{m}}
 *Swedish: [[snitt]] {{n}}
 {{trans-bottom}}
 
 {{trans-top|result of cutting}}
 *Danish: [[snit]] {{n}}
 *Finnish: [[leikkaus]], [[viilto]], [[sivallus]], [[haava]]
+{{trans-mid}}
+*Italian: [[taglio]] {{m}}
 *Swedish: [[snitt]] {{n}}
 {{trans-bottom}}
 
@@ -115,18 +119,24 @@
 *Danish: [[aftagning]] {{c}}
 *Finnish: [[nosto]]
 *German: [[abheben]]
+{{trans-mid}}
+*Italian: [[alzata]] {{f}}
 *Swedish: [[giv]] {{c}}
 {{trans-bottom}}
 
 {{trans-top|manner or style a garment is fashioned in}}
 *Danish: [[snit]] {{n}}, [[mode]] {{c}}
 *Finnish: [[leikkaus]]
+{{trans-mid}}
+*Italian: [[taglia]] {{f}}
 {{trans-bottom}}
 
 {{trans-top|lower than normal rate}}
 *Danish: [[nedsættelse]] {{c}}
 *Finnish: [[leikata|leikattu]], [[alentaa|alennettu]] ([[hinta]])
 *French: [[baissé]], [[diminué]]
+{{trans-mid}}
+*Italian: [[riduzione]] {{f}}
 {{trans-bottom}}
 
 {{trans-top|slab of meat}}
@@ -134,6 +144,7 @@
 *Finnish: [[pala]]
 {{trans-mid}}
 *Hebrew: [[חתיכה]] (khatikha) {{f}}
+*Italian: [[taglio]] {{m}}, [[pezzo]] {{m}}
 {{trans-bottom}}
 
 {{trans-top|in fencing, an attack made with a chopping motion of the blade}}
@@ -143,11 +154,8 @@
 {{trans-bottom}}
 
 {{checktrans}}
-{{trans-top|translations to be checked}}
-*{{ttbc|Italian}}: [[taglio]].
 *{{ttbc|Romanian}}: [[tăietură]]
 *{{ttbc|Telugu}}: [[కోత]] (kOta), [[గాటు]] (gaaTu)
-{{trans-bottom}}
 
 ===Verb===
 {{en-verb|cuts|cutting|cut}}
