--- a/en/側/側.11140.wikitext
+++ b/en/側/側.11140.wikitext
@@ -24,10 +24,10 @@
 ==Japanese==
 
 ===Noun===
-{{ja-noun|k|count=|hira=がわ|kata=|rom=gawa|kanji=|kyu=|shin=|hidx=}}
+{{ja-noun|k|hira=がわ|rom=gawa}}
 
 # [[side]]
-{{ja-noun|k|count=|hira=そば|kata=|rom=soba|kanji=|kyu=|shin=|hidx=}}
+{{ja-noun|k|hira=そば|rom=soba}}
 # [[vicinity]], [[near]], [[beside]]
 
 ===Kanji===
