* before Han ref, * before ja-readings <偐#3468591>

--- a/en/偐/偐.11104.wikitext
+++ b/en/偐/偐.11104.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人卜竹竹 (OYHH)}}
+
 # [[false]], [[counterfeit]], [[spurious]]
+
 ====References====
-{{Han ref|kx=0110.180|dkj=00850|dj=0236.020|hdz=10194.100|uh=5050|ud=20560}}
+* {{Han ref|kx=0110.180|dkj=00850|dj=0236.020|hdz=10194.100|uh=5050|ud=20560}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[がん]] (gan), [[げん]] (gen)|kun=[[いつわる]] (itsuwaru), [[にせ]] (nise)}}
+* {{ja-readings|on=[[がん]] (gan), [[げん]] (gen)|kun=[[いつわる]] (itsuwaru), [[にせ]] (nise)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=안|rv=an|mr=an}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yàn]] ([[yan4]])|wg=yen<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偐]]
