* before Han ref, * before ja-readings <旵#3469810>

--- a/en/旵/旵.16925.wikitext
+++ b/en/旵/旵.16925.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=03|sn=7|four=6077<sub>0</sub>|canj=日山 (AU), X日山 (XAU)}}
+
 # [[日光照也]]
+
 ====References====
-{{Han ref|kx=0490.150|dkj=13762|dj=0851.160|hdz=21487.100|uh=65F5|ud=26101|bh=CAFC|bd=51964}}
+* {{Han ref|kx=0490.150|dkj=13762|dj=0851.160|hdz=21487.100|uh=65F5|ud=26101|bh=CAFC|bd=51964}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日03}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[たん]] (tan), [[てん]] (ten)|kun=}}
+* {{ja-readings|on=[[たん]] (tan), [[てん]] (ten)|kun=}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[hǎn]] ([[han3]])|wg=h'an<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:旵]]
