* before Han ref, * before ja-readings <愿#3487682>

--- a/en/愿/愿.15698.wikitext
+++ b/en/愿/愿.15698.wikitext
@@ -1,41 +1,56 @@
 {{see|願}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=14|four=7133<sub>9</sub>|canj=一火心 (MFP)}}
+
 # [[sincere]], [[honest]], [[virtuous]]
+
 ====References====
-{{Han ref|kx=0397.060|dkj=11030|dj=0736.020|hdz=42333.100|uh=613F|ud=24895|bh=BA40|bd=47680}}
+* {{Han ref|kx=0397.060|dkj=11030|dj=0736.020|hdz=42333.100|uh=613F|ud=24895|bh=BA40|bd=47680}}
 
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=yun6}}
+
 # {{defn|Cantonese}}
 
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[げん]] (gen)|kun=[[つつしむ]] (tsutsushimu)}}
+* {{ja-readings|on=[[げん]] (gen)|kun=[[つつしむ]] (tsutsushimu)}}
 
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=원|eumhun=|rv=won|mr=wŏn|y=wen}}
+
 # {{defn|Korean}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|tra=願|pin=[[yuàn]] ([[yuan4]])|wg=yüan<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 ====Compounds====
-*[[愿望]]
-*[[愿心]]
-*[[愿意]]
+* [[愿望]]
+* [[愿心]]
+* [[愿意]]
 
 [[fr:愿]]
