added inflection line for French/Verb <représentant#3489156>

--- a/en/r/représentant.1838.wikitext
+++ b/en/r/représentant.1838.wikitext
@@ -1,14 +1,18 @@
 ==French==
 
 ===Pronunciation===
-*{{IPA|/ʁǝ.pʁe.zɑ̃.tɑ̃/}}
-*{{SAMPA|/R@.pRe.zA~.tA~/}}
+* {{IPA|/ʁǝ.pʁe.zɑ̃.tɑ̃/}}
+* {{SAMPA|/R@.pRe.zA~.tA~/}}
 
 ===Verb===
-#Present participle of ''représenter'' = Representing
+{{infl|fr|verb}}
+
+# Present participle of ''représenter'' = Representing
+
 ===Noun===
 {{fr-infl-noun|sm=représentant|sf=représentante|pm=représentants|pf=représentantes|smp=ʁǝ.pʁe.zɑ̃.tɑ̃|sfp=ʁǝ.pʁe.zɑ̃.tɑ̃t|pmp=ʁǝ.pʁe.zɑ̃.tɑ̃|pfp=ʁǝ.pʁe.zɑ̃.tɑ̃t}}
-#Representative
+
+# Representative
 
 [[de:représentant]]
 [[fr:représentant]]
