checked chinese mandarin translation <cost#3489821>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -20,6 +20,8 @@ From {{OF.}} ''[[coster]]'' (modern: ''[[coût]]'').
 
 ====Translations====
 {{trans-top|amount of money, time, etc.}}
+* Chinese:
+*:Mandarin: {{zh-ts|費用|费用}} ([[fèi]][[yòng]]), {{zh-ts|成本|成本}} ([[chéng]][[běn]])
 * Czech: {{t-|cs|náklad|m}}
 * Finnish: {{t+|fi|hinta}}, {{t+|fi|kustannus}}
 * German: {{t+|de|Kosten|f|p}}
@@ -34,6 +36,8 @@ From {{OF.}} ''[[coster]]'' (modern: ''[[coût]]'').
 {{trans-bottom}}
 
 {{trans-top|negative consequence or loss}}
+* Chinese:
+*:Mandarin: {{zh-ts|代價|代价}} ([[dài]][[jìa]])
 * Finnish: {{t+|fi|hinta}}
 {{trans-mid}}
 * German: {{t+|de|Verlust|m}}
@@ -42,7 +46,6 @@ From {{OF.}} ''[[coster]]'' (modern: ''[[coût]]'').
 {{trans-bottom}}
 
 {{ttbc-top}}
-* {{ttbc|Chinese}}: [[费]] (fèi)
 * {{ttbc|German}}: [[Kosten]] ''f pl''
 * {{ttbc|Greek}}: [[κόστος]] [ˈko̞sto̞s] ''n'', [[έξοδο]] [ˈe̞k͡so̞ˌðo̞] ''n'', [[δαπάνη]] [ðaˈpani] ''f'', [[τίμημα]] [ˈtimiˌma] ''n'', [[αντίτιμο]] [aˈ(n)ditiˌmo̞] ''n''
 * {{ttbc|Indonesian}}: [[biaya]], [[ongkos]]
@@ -56,6 +59,8 @@ From {{OF.}} ''[[coster]]'' (modern: ''[[coût]]'').
 
 ====Translations====
 {{trans-top|to incur a charge, a price}}
+* Chinese:
+*:Mandarin: {{zh-ts|花費|花费}} ([[huā]][[fèi]])
 * Dutch: {{t+|nl|kosten}}
 * Finnish: {{t+|fi|maksaa}}
 * French: {{t+|fr|coûter}}
