* before Han ref, * before ja-readings <惲#3497116>

--- a/en/惲/惲.15623.wikitext
+++ b/en/惲/惲.15623.wikitext
@@ -1,33 +1,52 @@
 {{see|恽}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9705<sub>2</sub>|canj=心月十十 (PBJJ)}}
+
 # [[devise]], [[plan]], [[deliberate]]
 # [[consult]]
+
 ====References====
-{{Han ref|kx=0392.250|dkj=10857|dj=0728.090|hdz=42331.100|uh=60F2|ud=24818|bh=D940|bd=55616}}
+* {{Han ref|kx=0392.250|dkj=10857|dj=0728.090|hdz=42331.100|uh=60F2|ud=24818|bh=D940|bd=55616}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=wan6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[うん]] (un), [[きん]] (kin), [[ぎん]] (gin)|kun=[[あつい]] (atsui)}}
+* {{ja-readings|on=[[うん]] (un), [[きん]] (kin), [[ぎん]] (gin)|kun=[[あつい]] (atsui)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=운|eumhun=|rv=un|mr=un|y=wun}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|sim=恽|pin=[[yùn]] ([[yun4]])|wg=yün<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惲]]
