template -AHD +enPR <pull#3521131>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -5,9 +5,9 @@
 {{OE.}} ''[[pullian]]''
 
 ===Pronunciation===
-*{{AHD|po͝ol}}, {{IPA|/pʊl/}}, {{SAMPA|/pUl/}}
-*{{audio|en-us-pull.ogg|Audio (US)}}
-*:Rhymes: [[Rhymes:English:-ʊl|-ʊl]]
+* {{enPR|po͝ol}}, {{IPA|/pʊl/}}, {{SAMPA|/pUl/}}
+* {{audio|en-us-pull.ogg|Audio (US)}}
+*: Rhymes: [[Rhymes:English:-ʊl|-ʊl]]
 
 ===Transitive verb===
 {{rfc-trverb|Transitive verb}}
@@ -15,51 +15,51 @@
 
 # To apply a [[force]] to (an object) such that it comes [[toward]] the person or thing applying the force.
 # {{context|slang}} To persuade (someone) to have sex with one<!-- or to be 'on the pull' (willing to have sex)-->.
-#:''He's pulled that bird over there.''
+#: ''He's pulled that bird over there.''
 # to [[remove]] (something), especially from public [[circulation]] or [[availability]]
-#:''Each day, they pulled the old bread and set out fresh loaves.''
+#: ''Each day, they pulled the old bread and set out fresh loaves.''
 # {{context|informal}} to [[do]] or [[perform]]
-#:''He regularly '''pulls''' 12-hour days, sometimes 14.''
+#: ''He regularly '''pulls''' 12-hour days, sometimes 14.''
 # To [[retrieve]] or [[generate]] for use.
-#:''I'll have to '''pull''' a part number for that.''
+#: ''I'll have to '''pull''' a part number for that.''
 
 ====Synonyms====
-*(''apply force to (something) so it comes toward''): [[drag]], [[tow]], [[tug]], [[yank]]
-*{{i-c|slang: persuade to have sex with one}}
-*{{i-c|remove from circulation}} [[recall]], [[withdraw]], [[yank]]
-*{{i-c|to do|to perform}} [[carry out]], [[complete]], [[do]], [[execute]], [[perform]]
-*{{i-c|retrieve or generate for use}} [[generate]], [[get]], [[get hold of]], [[get one's hands on]], [[lay one's hands on]], [[obtain]], [[retrieve]]
+* (''apply force to (something) so it comes toward''): [[drag]], [[tow]], [[tug]], [[yank]]
+* {{i-c|slang: persuade to have sex with one}}
+* {{i-c|remove from circulation}} [[recall]], [[withdraw]], [[yank]]
+* {{i-c|to do|to perform}} [[carry out]], [[complete]], [[do]], [[execute]], [[perform]]
+* {{i-c|retrieve or generate for use}} [[generate]], [[get]], [[get hold of]], [[get one's hands on]], [[lay one's hands on]], [[obtain]], [[retrieve]]
 
 ====Antonyms====
-*(''apply force to (something) so it comes towards one''): [[push]], [[repel]], [[shove]]
+* (''apply force to (something) so it comes towards one''): [[push]], [[repel]], [[shove]]
 
 ====Derived terms====
 ''See also'' '''[[pulling]]'''<!--as "pulling power"-->
 {{rel-top|Terms derived from the verb ''to pull''}}
-*[[pull a|pull a...]]
-*[[pull a face]]
-*[[pull a fast one]]
-*[[pull away]]
-*[[pull back]]
-*[[pull down]]
+* [[pull a|pull a...]]
+* [[pull a face]]
+* [[pull a fast one]]
+* [[pull away]]
+* [[pull back]]
+* [[pull down]]
 <!--"pulley" is not derived from "pull"-->
-*[[pull in]]
-*[[pulling]]
-*[[pull off]]
-*[[pull oneself together]]
-*[[pull out]]
+* [[pull in]]
+* [[pulling]]
+* [[pull off]]
+* [[pull oneself together]]
+* [[pull out]]
 {{rel-mid}}
-*[[pull over]]
+* [[pull over]]
 <!--"pullover" is derived from "pull over"-->
-*[[pull-quote]]
-*[[pull rank]]
-*[[pull round]]
-*[[pull somebody's leg]]
-*[[pull the other one]], [[pull the other one, it's got bells on]]
-*[[pull the wool over someone's eyes]]
-*[[pull through]]
-*[[pull together]]
-*[[pull up]]
+* [[pull-quote]]
+* [[pull rank]]
+* [[pull round]]
+* [[pull somebody's leg]]
+* [[pull the other one]], [[pull the other one, it's got bells on]]
+* [[pull the wool over someone's eyes]]
+* [[pull through]]
+* [[pull together]]
+* [[pull up]]
 <!--"pull-up" is derived from "pull up"-->
 {{rel-bottom}}
 
@@ -109,11 +109,11 @@
 {{en-verb}}
 
 # To apply a force such that an object comes toward the person or thing applying the force.
-#:''You're going to have to pull harder to get that cork out of the bottle.''
+#: ''You're going to have to pull harder to get that cork out of the bottle.''
 # {{context|slang}} To succeed in finding a person with whom to have sex.
 
 ====Synonyms====
-*{{i-c|slang: succeed in finding a person with whom to have sex}} [[score]]
+* {{i-c|slang: succeed in finding a person with whom to have sex}} [[score]]
 
 ====Translations====
 {{trans-top|apply force such that an object comes toward the person or thing applying the force}}
@@ -135,32 +135,32 @@
 {{en-noun}}
 
 # An act of pulling (applying force).
-#:''He gave the hair a sharp '''pull''' and it came out.''
+#: ''He gave the hair a sharp '''pull''' and it came out.''
 # An [[attractive]] [[force]] which causes [[motion]] towards the source
-#:''The spaceship came under the '''pull''' of the gas giant.''
-#:''iron fillings drawn by the '''pull''' of a magnet''
+#: ''The spaceship came under the '''pull''' of the gas giant.''
+#: ''iron fillings drawn by the '''pull''' of a magnet''
 # Any device meant to be pulled, as a [[lever]], [[knob]], [[handle]], or [[rope]].
-#:''a zipper '''pull'''''
+#: ''a zipper '''pull'''''
 # {{slang}} [[influence]], especially as a means of gaining [[advantage]]
 # [[appeal|Appeal]] or [[attraction]] or (as of a movie star)
 
 ====Synonyms====
-*{{i-c|act of pulling}} [[tug]], [[yank]]
-*{{i-c|attractive force}} [[attraction]]
-*{{i-c|device meant to be pulled}} [[handle]], [[knob]], [[lever]], [[rope]]
-*{{i-c|influence}} [[influence]], [[sway]]
+* {{i-c|act of pulling}} [[tug]], [[yank]]
+* {{i-c|attractive force}} [[attraction]]
+* {{i-c|device meant to be pulled}} [[handle]], [[knob]], [[lever]], [[rope]]
+* {{i-c|influence}} [[influence]], [[sway]]
 
 ====Antonyms====
-*{{i-c|act of pulling}} [[push]], [[shove]]
-*{{i-c|attractive force}} [[repulsion]]
-*{{i-c|device meant to be pulled}} [[button]], [[push]], [[push button]]
-*{{i-c|influence}}
+* {{i-c|act of pulling}} [[push]], [[shove]]
+* {{i-c|attractive force}} [[repulsion]]
+* {{i-c|device meant to be pulled}} [[button]], [[push]], [[push button]]
+* {{i-c|influence}}
 
 ====Derived terms====
 {{rel-top|Terms derived from the noun ''pull''}}
-*[[on the pull]]
+* [[on the pull]]
 {{rel-mid}}
-*[[ring-pull]]
+* [[ring-pull]]
 {{rel-bottom}}
 
 ====Translations====
@@ -209,7 +209,7 @@
 ==French==
 
 ===Pronunciation===
-*{{IPA|/pyl/}}, {{SAMPA|/pyl/}}
+* {{IPA|/pyl/}}, {{SAMPA|/pyl/}}
 
 ===Etymology===
 {{E.|fr}} '''[[pullover]]'''
