[[User:Keene/IPA|fix IPA links]] <fought#3521870>

--- a/en/f/fought.6880.wikitext
+++ b/en/f/fought.6880.wikitext
@@ -1,8 +1,7 @@
 ==English==
 
 ===Pronunciation===
-*[[w:SAMPA|SAMPA]]: /'/
-*[[w:IPA|IPA]]: /'fɔʊt/
+*{{IPA|/'fɔʊt/}}
 *{{audio|en-us-fought.ogg|Audio (US)}}
 *Rhymes: [[Rhymes:English:-ɔːt|-ɔːt]]
 
