* before Han ref, * before ja-readings <坽#3526633>

--- a/en/坽/坽.13056.wikitext
+++ b/en/坽/坽.13056.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=4813<sub>7</sub>|canj=土人戈戈 (GOII)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0227.110|dkj=05007|dj=0462.270|hdz=10433.070|uh=577D|ud=22397|bh=CC41|bd=52289}}
+* {{Han ref|kx=0227.110|dkj=05007|dj=0462.270|hdz=10433.070|uh=577D|ud=22397|bh=CC41|bd=52289}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[れい]] (rei), [[りょう]] (ryō)|kun=}}
+* {{ja-readings|on=[[れい]] (rei), [[りょう]] (ryō)|kun=}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[líng]] ([[ling2]])|wg=ling<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坽]]
