--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -61,9 +61,13 @@
 
 ====Translations====
 {{trans-top|To pierce or wound with pointed tool or weapon}}
-*Finnish: [[puukottaa]]
+* Bosnian: {{t|bs|bosti}}
+* Croatian: {{t|hr|bosti}}
+* Finnish: [[puukottaa]]
+* Lithuanian: {{t|lt|badyti}}
 {{trans-mid}}
-*Spanish: [[apuñalar]]
+* Serbian: {{t|sr|bosti}}
+* Spanish: [[apuñalar]]
 {{trans-bottom}}
 
 {{trans-top|To aim a blow with a weapon or a finger (at someone or something)}}
