iwiki +de <zenith#3535333>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -52,6 +52,7 @@ From {{Arab.}} ''as-samt'' "direction of heads", via misspelled Italian ''zenit'
 *{{ttbc|Interlingua}}: [[zenit]]
 *{{ttbc|Spanish}}: [[cenit]] {{m}}, [[zenit]] {{m}}, [[auge]] {{m}}
 
+[[de:zenith]]
 [[fa:zenith]]
 [[fr:zenith]]
 [[io:zenith]]
