--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -145,7 +145,7 @@ From {{OF.}} ''[[poulser]]'' (modern ''[[pousser]]''), from {{L.}} ''[[pulsare]]
 *German: [[Schubs]] {{m}}, [[Stoß]] {{m}}
 {{trans-mid}}
 *Kurdish: {{KUchar|[[پاڵ]]}}
-*Spanish: [[empuj&oacute;n]] {{m}}
+*Spanish: [[empujón]] {{m}}
 {{trans-bottom}}
 
 {{trans-top|act of tensing the muscles of the abdomen in order to expel its contents}}
