Reverted edits by [[Special:Contributions/68.89.202.246|68.89.202.246]] ([[User_talk:68.89.202.246|Talk]]); changed back to last version by [[User:Keene|Keene]] <cut#3536663>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -16,11 +16,8 @@
 # [[reduce|Reduced]].
 #:''The [[pitcher]] threw a '''cut''' [[fastball]] that was slower than his usual [[pitch]].''
 #:'''''Cut''' brandy is a liquor made of brandy and hard grain liquor.''
-#[[[[#English|Cut]][[[[#English|Cut]][[[[#English|Cut]]
-== 
-== English ==
-[[Media:jjkjklllk]] ==
-]]]]]]a shot}} Played with a [[horizontal]] [[bat]] to hit the ball backward of point.
+# {{context|of a gem}} [[carve|Carve]]d into a [[shape]]; not [[raw]].
+# {{cricket|of a shot}} Played with a [[horizontal]] [[bat]] to hit the ball backward of point.
 # {{bodybuilding}} Having muscular [[definition]] in which individual groups of [[muscle]] fibers stand out among larger muscles.
 # {{colloquial}} [[circumcised|Circumcised]].
 
