--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -33,7 +33,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Danish: [[leg]], [[spil]]
 * Dutch: {{t+|nl|spel}}
 * Esperanto: {{t-|eo|ludo|xs=Esperanto}}
-* [[Ewe]]: [[fefe]] {{n}}
+* [[Ewe]]: [[fefe]]
 * Finnish: {{t+|fi|leikki}}, {{t+|fi|peli}}
 * French: {{t+|fr|jeu|m}}
 * German: {{t+|de|Spiel|n}}
@@ -47,7 +47,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Norwegian: {{t+|no|spill}}
 * Polish: [[zabawa]] {{f}}
 * Portuguese: {{t+|pt|jogo|m}}
-* Romanian: [[joc]] {{f}} and {{m}}
+* Romanian: [[joc]] {{m|f}}
 * Russian: {{t+|ru|игра|f|tr=igrá|sc=Cyrl}}
 * Slovak [[hra]] {{f}}
 * Slovene: {{t+|sl|igra|f}}
@@ -62,7 +62,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Czech: {{t-|cs|hra|f}}
 * Danish: [[stykke]], [[spil]]
 * Dutch: {{t+|nl|optreden|n}}, {{t+|nl|schouwspel|n}}, {{t+|nl|toneelstuk|n}}, {{t+|nl|stuk|n}}
-* [[Ewe]]: [[fefe]] {{n}}
+* [[Ewe]]: [[fefe]]
 * Finnish: {{t+|fi|näytelmä}}
 * French: {{t+|fr|pièce|f}}
 * German: {{t+|de|Schauspiel|n}}
@@ -76,7 +76,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * [[Malayalam]]: [[നാടകം]] (naatakam)
 * Polish: {{t+|pl|sztuka|f}}
 * Portuguese: [[peça]] [[teatral]] {{f}}
-* Russian: {{t|ru|пьеса|f|tr=p'jésa|sc=Cyrl}}, {{t|ru|спектакль|m|tr=sp'ektákl'|sc=Cyrl}}
+* Russian: {{t|ru|пьеса|f|tr=p’jésa|sc=Cyrl}}, {{t|ru|спектакль|m|tr=spektákl’|sc=Cyrl}}
 * Slovak [[hra]] {{f}}
 * Slovene: {{t+|sl|igra|f}}
 * Spanish: [[obra]] [[teatral]] {{f}}
