/* Translations */ reqs <bridge#3552500>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -36,26 +36,37 @@
 
 =====Translations=====
 {{trans-top|construction or natural feature that spans a divide}}
+*{{trreq|Afrikaans}}
 *Albanian: [[urë]] {{f}}
 *Arabic: {{ARchar|[[كوبري]]}} (kúbri)
+*{{trreq|Armenian}}
 *[[Basque]]: [[zubi]]
+*{{trreq|Belarusian}}
+*{{trreq|Bengali}}
 *Bosnian: [[most#Bosnian|most]] {{m}}, [[ćuprija]] {{f}} ''(arch./poetic)''
 *[[Breton]]: [[pont#Breton|pont]] {{m}}, pontoù {{p}}
+*{{trreq|Bulgarian}}
+*{{trreq|Burmese}}
 *[[Catalan]]: [[pont#Catalan|pont]]
-*Chinese: [[橋]], [[桥]] (qiáo)
 *CJKV Characters: [[橋]]
+*Chinese: [[橋]], [[桥]] (qiáo)
 *Croatian: [[most]] {{m}}
 *Czech: [[most#Czech|most]] {{m}}
 *Danish: [[bro]] {{c}}
 *Dutch: [[brug]]
 *Esperanto: [[ponto]]
 *Estonian: [[sild]]
+*{{trreq|Faroese}}
 *Finnish: [[silta]]
 *French: [[pont]] {{m}}
 *[[Frisian]]: [[brêge]]
+*{{trreq|Georgian}}
 *German: [[Brücke]] {{f}}
 *Greek: [[γέφυρα]] (yéfira)
+*{{trreq|Gujarati}}
+*{{trreq|Hawaiian}}
 *Hebrew: [[גשר]] (gesher) {{m}}
+*{{trreq|Hindi}}
 *Hungarian: [[híd]]
 *Icelandic: [[brú]] {{f}}
 *[[Ido]]: [[ponto]]
@@ -63,38 +74,60 @@
 *Irish: [[droichead]]
 *Italian: [[ponte#Italian|ponte]] {{m}}
 *Japanese: [[橋]] ([[はし]], hashi)
+*{{trreq|Kannada}}
+*{{trreq|Khmer}}
 *Korean: [[다리]] (dari), ...[[교]] (...gyo, used as suffix)
 *Kurdish:
 *:Kurmancî: [[pir]]
 *:Soranî: {{KUchar|[[پرد]]}}, (pird)
-{{trans-mid}}
+*{{trreq|Lao}}
 *Latin: [[pons]] {{m}}
+{{trans-mid}}
 *Latvian: [[tilts#Latvian|tilts]] {{m}}
 *Lithuanian: [[tiltas]] {{m}}
+*{{trreq|Lower Sorbian}}
+*{{trreq|Malay}}
 *[[Malayalam]]: [[പാലം]] (paalam)
 *Maltese: [[pont]] ((m}}
+*{{trreq|Maori}}
+*{{trreq|Monginian}}
+*{{trreq|Nepali}}
 *Norwegian: [[bro]] {{m}}{{f}}, [[bru]] {{m}}{{f}}
 *[[Occitan]]: [[pònt]]
 *Old English: [[brycg]] {{f}}
+*{{trreq|Oriya}}
+*{{trreq|Persian}}
 *Polish: [[most#Polish|most]] {{m}}
 *Portuguese: [[ponte#Portuguese|ponte]] {{f}}
+*{{trreq|Punjabi}}
 *Romanian: [[pod]] [[punte]]
 *Russian: [[мост]] (most) {{m}}
 *Serbian:
 *:Cyrillic: [[мост#Serbian|мост]] {{m}}, [[ћуприја#Serbian|ћуприја]] {{f}} ''(arch./poetic)''
 *:Roman: [[most#Serbian|most]] {{m}}, [[ćuprija#Serbian|ćuprija]] {{f}} ''(arch./poetic)''
 *[[Romansch]]: [[punt]] {{m}}
+*{{trreq|Samoan}}
+*{{trreq|Sanskrit}}
 *[[Scottish Gaelic]]: [[drochaid]] {{f}}
+*{{trreq|Sinhala}}
 *Slovak: [[most#Slovak|most]] {{m}}
 *Slovene: [[most#Slovene|most]] {{m}}
 *Spanish: [[puente]] {{m}}, [[bóveda]] {{f}} (''El Salvador'')
+*{{trreq|Swahili}}
 *Swedish: [[bro#Swedish|bro]] {{c}}
+*{{trreq|Tahitian}}
 *[[Tamazight]]: [[ⵜⵉⵍⴻⴳⴳⵡⵉⵜ]] (tileggwit) {{f}}
+*{{trreq|Tamil}}
 *[[Telugu]]: [[వారధి]], [[వంతెన]], [[సేతువు]]
+*{{trreq|Thai}}
+*{{trreq|Tongan}}
 *Turkish: [[köprü]]
 *Ukrainian: [[міст]], (mist) {{m}}, pl. мости (mostý)
+*{{trreq|Upper Sorbian}}
+*{{trreq|Urdu}}
 *Vietnamese: [[cầu]]
 *Welsh: [[pont#Welsh|pont]]
+*{{trreq|Yiddish}}
 {{trans-bottom}}
 
 {{trans-top|bony ridge of the nose}}
@@ -130,8 +163,8 @@
 *Hungarian: [[hid#Hungarian|híd]]
 *Polish: [[mostek kapitański]] {{m}}
 *Russian: [[капитанский мостик]] (kapitánskij móstik) {{m}}
-{{trans-mid}}
 *Serbian:
+{{trans-mid}}
 *:Cyrillic: [[капетански мостић#Serbian|капетански мостић]] {{m}}
 *:Roman: [[kapetanski mostić#Serbian|kapetanski mostić]] {{m}}
 *Slovene: [[most]] {{m}}
@@ -140,13 +173,13 @@
 {{trans-bottom}}
 
 {{trans-top|communications}}
-{{trans-mid}}
 *Spanish: [[pasarela]] {{f}}
+{{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|chemistry}}
-{{trans-mid}}
 *Russian: [[мостик]] (móstik) {{m}}
+{{trans-mid}}
 {{trans-bottom}}
 
 =====Derived terms=====
