--- a/en/r/représentant.1838.wikitext
+++ b/en/r/représentant.1838.wikitext
@@ -5,14 +5,14 @@
 * {{SAMPA|/R@.pRe.zA~.tA~/}}
 
 ===Verb===
-{{infl|fr|verb}}
+{{infl|fr|present participle}}
 
-# Present participle of ''représenter'' = Representing
+# {{present participle of|[[représenter]]}}; [[representing]]
 
 ===Noun===
 {{fr-infl-noun|sm=représentant|sf=représentante|pm=représentants|pf=représentantes|smp=ʁǝ.pʁe.zɑ̃.tɑ̃|sfp=ʁǝ.pʁe.zɑ̃.tɑ̃t|pmp=ʁǝ.pʁe.zɑ̃.tɑ̃|pfp=ʁǝ.pʁe.zɑ̃.tɑ̃t}}
 
-# Representative
+# [[representative]]
 
 [[de:représentant]]
 [[fr:représentant]]
